k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: investing
  namespace: investing
  labels:
    app: investing
spec:
  type: ClusterIP
  selector:
    app: investing
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
